Chapter 7 notes